gap corrections

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
     border-bottom: 1px solid #bbbaa733;
     position: fixed;
     top:0;
+    z-index: 10;
 }
 .top1{
     width: 92%;
@@ -77,7 +78,7 @@ body{
 }
 .home{
     width: 100%;
-    height: 120%;
+    height: 90%;
     background-color: rgb(14,15,15);
     display: flex;
     justify-content: center;
@@ -111,7 +112,7 @@ body{
 }
 .home01{
     width: 100%;
-    height: 70%;
+    height: 80%;
     background-color: rgb(14,15,15);
 }
 .home02{
@@ -191,7 +192,7 @@ body{
 }
 .ser{
     width: 100%;
-    height: 25%;
+    height: 15%;
     background-color: rgb(16,17,17);
     display: flex;
     justify-content: center;
@@ -449,7 +450,7 @@ body{
 }
 .grid{
     width: 100%;
-    height: 170%;
+    height: auto;
     background-color: rgb(14,15,15);
     display: flex;
     justify-content: center;
@@ -717,9 +718,10 @@ ul{
 }
 .resume{
     width: 100%;
-    height: 25%;
+    height: 15%;
     background-color: rgb(16,17,17);
     display: flex;
+    align-items: center;
     justify-content: center;
 }
 .resume1{
@@ -727,6 +729,8 @@ ul{
     height: 100%;
     background-color: rgb(16,17,17);
     display: flex;
+    align-items: center;
+    
 }
 .resume2{
     width: 25%;
